Fix spacing

--- a/styles/atomify.less
+++ b/styles/atomify.less
@@ -21,6 +21,6 @@
 }
 
 .atomify-image {
-  margin-right: 10px;
+  margin-left: 1.5em;
   vertical-align: middle;
 }
